--- a/templates/wild/show.html.twig
+++ b/templates/wild/show.html.twig
@@ -1,10 +1,19 @@
-{% extends'base.html.twig' %}
+{% extends 'base.html.twig' %}
+{% block title %}{{ slug }}{% endblock %}
 
 {% block body %}
-    <h1>{{ slug }}</h1>
 
-    <a href="{{ path('wild_show', {'slug':'house-of-cards'}) }}">Afficher le nom d'une série</a> <br />
-    <a href="{{ path('wild_show', {'slug':'ma-superbe-serie'}) }}">Afficher le nom d'une autre série</a>
+    <div class="media">
+        <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
+        <div class="media-body">
+            <h1 class="mt-0">{{ program.title }}</h1>
+            <p>{{ program.summary }}</p>
+            <p>Categorie : {{ program.category.name }}</p>
+        </div>
+    </div>
 
+    <a href="{{ path('app_index') }}">
+        Retour à l'accueil
+    </a>
 
 {% endblock %}
