09 - Symfony : Les relations bidirectionnelles avec Doctrine

--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -17,6 +17,8 @@
                     Séries
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ path('show_program', {'slug': "penny-dreadful"}) }}">Penny Dreadful</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item"
                        href="{{ path('wild_show', {'slug': "walking-dead" }) }}">Toutes
                         les séries</a>
@@ -28,7 +30,8 @@
                     Catégories
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{{ path('show_category', {'categoryName': 'horreur' }) }}">Horreur</a>
+                    <a class="dropdown-item"
+                       href="{{ path('show_category', {'categoryName': 'horreur' }) }}">Horreur</a>
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Comédie</a>
                 </div>
