--- a/templates/wild/category.html.twig
+++ b/templates/wild/category.html.twig
@@ -8,7 +8,7 @@
                  alt="{{ program.title }} poster">
             <div class="media-body">
                 <h1 class="mt-0">{{ program.id }} - {{ program.title }}</h1>
-                <p>{{ program.summary }}</p>
+                <p>{{ program.synopsis }}</p>
                 <p>Categorie : {{ categoryName }}</p>
             </div>
         </div>
