--- a/templates/wild/show.html.twig
+++ b/templates/wild/show.html.twig
@@ -7,7 +7,7 @@
         <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
         <div class="media-body">
             <h1 class="mt-0">{{ program.title }}</h1>
-            <p>{{ program.summary }}</p>
+            <p>{{ program.synopsis }}</p>
             <p>Categorie : {{ program.category.name }}</p>
         </div>
     </div>
