--- a/templates/wild/program.html.twig
+++ b/templates/wild/program.html.twig
@@ -6,30 +6,28 @@
     <div class="media">
         <div class="card text-center">
             <div class="card-header bg-secondary">
-                <h1>{{ program.title }}</h1>
+                <h1 style="color: #193365">{{ program.title }}</h1>
             </div>
             <div class="card-body">
-                <h5 class="card-title"><img height="400px" src="{{ program.poster }}"
-                                            alt="{{ program.title }} poster"></h5>
+
+                <section class="banner-homepage">
+                    <div class="homepage-banner-content-container">
+                        <h5 class="card-title ">
+                            <img height="500px" src="{{ program.poster }}" alt="{{ program.title }} poster">
+                        </h5>
+                    </div>
+                </section>
                 <p class="card-text">{{ program.synopsis }}</p>
             </div>
             <div class="card-footer bg-secondary">
                 <p><strong>Categorie :</strong> {{ program.category.name }}</p>
                 <p><strong>Pays :</strong> {{ program.country }}</p>
+                {% for season in seasons %}
+                    <a href="{{ path('show_season', {'id': season.id}) }}">
+                        <button ype="button" class="btn btn-primary">Saison {{ season.number }}</button>
+                    </a>
+                {% endfor %}
             </div>
-        </div>
-        <div>
-            {% for season in seasons %}
-                <div class="card w-70">
-                    <div class="card-body">
-                        <h5 class="card-title"><strong>Saison :</strong> {{ season.number }}</h5></a>
-                        <p class="card-text">{{ season.description }}</p>
-                        <p><a href="{{ path('show_season', {'id': season.id }) }}" class="btn btn-primary">Voir les
-                                épisodes</a></p>
-                        <p class="card-text"><strong>Année :</strong> {{ season.year }}</p>
-                    </div>
-                </div>
-            {% endfor %}
         </div>
     </div>
 {% endblock %}
