--- a/templates/wild/season.html.twig
+++ b/templates/wild/season.html.twig
@@ -1,29 +1,24 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <div>
+        <div class="card w-70">
+            <p class="card-body">
+                <h1 style="color:#193365;" class="text-center">Saison {{ season.number }} de {{ program.title }}</h1>
+                <p><h5 class="text-center"><strong>Année :</strong> {{ season.year }}</h5></p>
+                <p class="text-center">{{ season.description }}</p>
+                <hr/>
+                <p><h2 class="text-center">Liste des épisodes</h2></p>
 
-    <h1 style="color:#193365; margin-top:25px" class="text-center">Saison {{ season.number }} de {{ program.title }}</h1>
-    <p class="text-center">{{ season.description }}</p>
-    <hr/>
-
-    {% for episode in episodes %}
-
-        <div class="card mb-3  col-8 bg-secondary container-fluid">
-            <div class="row no-gutters">
-                <div class="col-md-4">
-                    <img src="{{ episode.poster }}" class="card-img" alt="{{ episode.title }}">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 style="color:#193365" class="card-title">Episode {{ episode.number }}
-                            : {{ episode.title }}</h5>
-                        <p class="card-text">{{ episode.synopsis }}</p>
+                {% for episode in episodes %}
+                    <div class="text-center">
+                        <h5>Episode {{ episode.number }}<a href="{{ path('show_episode', {'id': episode.id }) }}">
+                            {{ episode.title }}</a></h5>
                     </div>
-                </div>
+                {% endfor %}
+
+                <a href="{{ path('show_program', {'slug': 'penny-dreadful'}) }}"><button type="submit" class="btn btn-primary">Retour</button></a>
             </div>
         </div>
-        </a>
-
-    {% endfor %}
-    <a href="{{ path('show_program', {'slug': 'penny-dreadful'}) }}">Retour aux saisons</a>
+    </div>
 {% endblock %}
