--- a/templates/wild/index.html.twig
+++ b/templates/wild/index.html.twig
@@ -3,6 +3,13 @@
 {% block title %}All programs{% endblock %}
 
 {% block body %}
+
+    {{ form_start(form) }}
+    {{ form_row(form.searchField) }}
+    <button type="submit" name="btnSearch">Rechercher</button>
+    {{ form_end(form) }}
+
+
     <h1>Toutes les séries de la table program : </h1>
     {% for program in programs %}
         <div>
@@ -15,4 +22,5 @@
     <a href="{{ path('app_index') }}">
         Retour à l'accueil
     </a>
+
 {% endblock %}
