12 - Symfony : Générer un CRUD

--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -38,7 +38,7 @@
             </li>
             <li style="margin-left: 15px">
             <div>
-                <a href="{{ path('category_add') }}" class="nav-link-color">Admin</a>
+                <a href="{{ path('admin_index') }}" class="nav-link-color">Admin</a>
             </div>
             </li>
         </ul>
