--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -17,7 +17,7 @@
                     Séries
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{{ path('show_program', {'slug': "penny-dreadful"}) }}">Penny Dreadful</a>
+                    <a class="dropdown-item" href="{{ path('wild_show_program', {'slug': "penny-dreadful"}) }}">Penny Dreadful</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item"
                        href="{{ path('wild_show', {'slug': "walking-dead" }) }}">Toutes
@@ -31,7 +31,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item"
-                       href="{{ path('show_category', {'categoryName': 'horreur' }) }}">Horreur</a>
+                       href="{{ path('wild_show_category', {'categoryName': 'horreur' }) }}">Horreur</a>
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Comédie</a>
                 </div>
