--- a/templates/wild/episode.html.twig
+++ b/templates/wild/episode.html.twig
@@ -19,6 +19,6 @@
                 </div>
             </div>
         </div>
-    <a href="{{ path('show_season', {'id': season.id}) }}"><button type="submit" class="btn btn-primary">Retour</button></a>
+    <a href="{{ path('wild_show_season', {'id': season.id}) }}"><button type="submit" class="btn btn-primary">Retour</button></a>
 
 {% endblock %}
