--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -4,6 +4,16 @@
 
 {% block body %}
     <h1 class="text-center" style="margin: 30px">Série {{ program.title }}</h1>
+    <div class="container-center">
+        <strong>Acteur/s :</strong>
+        <ul>
+            {% for actor in program.actors %}
+                <li><a href="{{ path('actor_show', {'id': actor.id}) }}">{{ actor.name }}</a></li>
+            {% else %}
+                <li>Aucun acteur pour cette série</li>
+            {% endfor %}
+        </ul>
+    </div>
     <div class="container h-100">
         <div class="row align-items-center justify-content-center h-100">
             <div class="col-12">
@@ -44,7 +54,6 @@
             </div>
         </div>
     </div>
-
     <a href="{{ path('program_index') }}">Retour à la liste</a>
 
 {% endblock %}
