--- a/templates/program/_form.html.twig
+++ b/templates/program/_form.html.twig
@@ -2,7 +2,7 @@
     <div class="row align-items-center justify-content-center h-100">
         <div class="col-12">
             <div>
-                {{ form_start(form)}}
+                {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
                 {{ form_widget(form) }}
                 <button class="btn btn-primary">{{ button_label|default('Sauvegarder') }}</button>
                 {{ form_end(form) }}
