--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -1,18 +1,34 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Actor{% endblock %}
+
 {% block body %}
-    <div class="container-center">
-<h1 style="margin: 25px">{{ actor.name }}</h1>
+    <h1>Actor</h1>
 
-    <img src="{{ actor.picture }}" height="350px" alt="Photo de {{ actor.name }}">
-<h2 style="margin: 25px">Séries principales :</h2>
-    <ul>
-    {% for program in actor.programs %}
-    <li><a href="{{ path('program_show', {'id': program.id}) }}">{{ program.title }}</a></li>
-    {% else %}
-        <li>Aucun série pour cette acteur</li>
-    {% endfor %}
-    </ul>
-    </div>
+    <table class="table">
+        <tbody>
+            <tr>
+                <th>Id</th>
+                <td>{{ actor.id }}</td>
+            </tr>
+            <tr>
+                <th>Name</th>
+                <td>{{ actor.name }}</td>
+            </tr>
+            <tr>
+                <th>Picture</th>
+                <td>{{ actor.picture }}</td>
+            </tr>
+            <tr>
+                <th>Slug</th>
+                <td>{{ actor.slug }}</td>
+            </tr>
+        </tbody>
+    </table>
 
+    <a href="{{ path('actor_index') }}">back to list</a>
+
+    <a href="{{ path('actor_edit', {'slug': actor.slug}) }}">edit</a>
+
+    {{ include('actor/_delete_form.html.twig') }}
 {% endblock %}
