--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -34,10 +34,10 @@
                                     <td>{{ program.country }}</td>
                                     <td>{{ program.year }}</td>
                                     <td>
-                                        <p><a href="{{ path('program_show', {'id': program.id}) }}">
+                                        <p><a href="{{ path('program_show', {'slug': program.slug}) }}">
                                                 <button class="btn btn-primary">Voir</button>
                                             </a></p>
-                                        <a href="{{ path('program_edit', {'id': program.id}) }}">
+                                        <a href="{{ path('program_edit', {'slug': program.slug}) }}">
                                             <button class="btn btn-secondary">Editer</button>
                                         </a>
                                     </td>
