--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -8,7 +8,7 @@
         <strong>Acteur/s :</strong>
         <ul>
             {% for actor in program.actors %}
-                <li><a href="{{ path('actor_show', {'id': actor.id}) }}">{{ actor.name }}</a></li>
+                <li><a href="{{ path('actor_show', {'slug': actor.slug}) }}">{{ actor.name }}</a></li>
             {% else %}
                 <li>Aucun acteur pour cette série</li>
             {% endfor %}
@@ -46,7 +46,7 @@
                         </tr>
                         </tbody>
                     </table>
-                    <a href="{{ path('program_edit', {'id': program.id}) }}">
+                    <a href="{{ path('program_edit', {'slug': program.slug}) }}">
                         <button class="btn btn-primary">Editer</button>
                        <div  style="margin-top: 10px">{{ include('program/_delete_form.html.twig') }}</div>
                     </a>
