--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -36,11 +36,34 @@
                         <button class="btn btn-primary">Editer</button>
                         <div style="margin-top: 10px">{{ include('episode/_delete_form.html.twig') }}</div>
                     </a>
+                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <div class="container-center">
+                        <div class="container-comment-form">
+                            <div class="row align-items-center justify-content-center">
+                                <div class="col-8">
+                                        {{ form_start(form) }}
+                                        {{ form_widget(form) }}
+                                        <button class="btn btn-secondary btn-sm">{{ button_label|default('Envoyer') }}</button>
+                                        {{ form_end(form) }}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
-
+    <div class="container-center">
+        <h4 class="title-comment">Liste des commentaires</h4>
+        {% for comment in comments %}
+            <div class="container-comment-list text-center">
+                <p>Nom: {{ comment.author.username }}</p>
+                <p>Commentaire: {{ comment.comment }}</p>
+                <p>Note: {{ comment.rate }}</p>
+            </div>
+        {% endfor %}
+    </div>
     <a href="{{ path('episode_index') }}">Retour à la liste</a>
 
 {% endblock %}
