--- a/templates/category/add.html.twig
+++ b/templates/category/add.html.twig
@@ -40,5 +40,5 @@
             </div>
         </div>
     </div>
-<a href="{{ path('admin_index') }}">Retour au menu</a>
+<a href="{{ path('app_index') }}">Retour a l'accueil</a>
 {% endblock %}
