--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -38,9 +38,11 @@
                                         <p><a href="{{ path('episode_show', {'slug': episode.slug}) }}">
                                                 <button class="btn btn-primary">Voir</button>
                                             </a></p>
+                                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                                         <p><a href="{{ path('episode_edit', {'slug': episode.slug}) }}">
                                                 <button class="btn btn-secondary">Editer</button>
                                             </a></p>
+                                        {% endif %}
                                     </td>
                                 </tr>
                             {% else %}
@@ -52,10 +54,12 @@
                         </table>
                     </div>
                 </div>
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 <p style="margin-top: 10px"><a href="{{ path('episode_new') }}">
                         <button class="btn btn-primary">Créer un épisode</button>
                     </a></p>
-                <p><a href="{{ path('admin_index') }}">Retour au menu</a> </p>
+                {% endif %}
+                <p><a href="{{ path('app_index') }}">Retour a l'acceuil</a> </p>
             </div>
         </div>
     </div>
