--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -3,5 +3,8 @@
 {% block title %}Page d'accueil{% endblock %}
 
 {% block body %}
-<h1>Bienvenue !</h1>
+    <section class="banner-homepage">
+        <img src="#" alt="Image fauteuil de cinéma">
+    </section>
+    <h1>Bienvenue !</h1>
 {% endblock %}
