--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -3,32 +3,31 @@
 {% block title %}Actor{% endblock %}
 
 {% block body %}
-    <h1>Actor</h1>
-
+    <h1 class="text-center">Acteurs</h1>
+<div class="container">
+    <div class="row">
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>#</th>
                 <td>{{ actor.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <td>{{ actor.name }}</td>
             </tr>
             <tr>
-                <th>Picture</th>
+                <th>Photo</th>
                 <td>{{ actor.picture }}</td>
-            </tr>
-            <tr>
-                <th>Slug</th>
-                <td>{{ actor.slug }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('actor_index') }}">back to list</a>
-
-    <a href="{{ path('actor_edit', {'slug': actor.slug}) }}">edit</a>
-
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+    <a href="{{ path('actor_edit', {'slug': actor.slug}) }}">Editer</a>
     {{ include('actor/_delete_form.html.twig') }}
+    {% endif %}
+    </div>
+</div>
+    <a href="{{ path('actor_index') }}">Retour à la liste</a>
 {% endblock %}
