--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -46,10 +46,12 @@
                         </tr>
                         </tbody>
                     </table>
+                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                     <a href="{{ path('program_edit', {'slug': program.slug}) }}">
                         <button class="btn btn-primary">Editer</button>
                        <div  style="margin-top: 10px">{{ include('program/_delete_form.html.twig') }}</div>
                     </a>
+                    {% endif %}
                 </div>
             </div>
         </div>
