--- a/templates/wild/program.html.twig
+++ b/templates/wild/program.html.twig
@@ -6,7 +6,7 @@
     <div class="media">
         <div class="card text-center">
             <div class="card-header bg-secondary">
-                <h1 style="color: #193365">{{ program.title }}</h1>
+                <h1>{{ program.title }}</h1>
             </div>
             <div class="card-body">
 
