21 - Symfony : Inscription d’un utilisateur

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -59,7 +59,11 @@ h1 {
     margin: 25px;
 }
 
-//Banner section
+.link-register {
+    position: absolute;
+    left: 200px;
+    bottom: 0;
+}
 
 
 @import "~bootstrap/scss/bootstrap";
