--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -71,7 +71,14 @@
         </form>
         <div style="margin-left: 15px">
             {% if app.user %}
-                <a href="{{ path('app_logout') }}" class="nav-link-color">Déconnexion</a>
+                <a href="{{ path('show_profile', {'id': app.user.id }) }}">
+                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">
+                        Mon compte
+                    </button>
+                </a>
+                <a href="{{ path('app_logout') }}" class="nav-link-color">
+                    <button class="btn btn-danger my-2 my-sm-0" type="submit">Déconnexion</button>
+                </a>
             {% else %}
                 <a href="{{ path('app_login') }}" class="nav-link-color">Connexion</a>
             {% endif %}
