--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,6 +39,7 @@
                         <button class="btn btn-primary" type="submit" style="margin-top: 15px">
                             Sign in
                         </button>
+                        <small class="link-register"><a href="{{ path('app_register') }}">Cliquez ici pour vous inscrire</a></small>
                     </div>
                 </div>
             </div>
