--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,16 @@
         {% endblock %}
     </head>
     <body>
-    <header>{% include 'navbar.html.twig' %}</header>
+{% block header %}
+    {% include 'navbar.html.twig' %}
+    {% for category, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ category }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+{% endblock %}
 
         {% block body %}{% endblock %}
 
