--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,8 +4,8 @@ $white: #FFF;
 $colorNavLink: #EFEFEF;
 
 // Fonts
-$titlefont : 'Roboto', cursive;
-$textfont : 'Montserrat', sans-serif;
+$titlefont: 'Roboto', cursive;
+$textfont: 'Montserrat', sans-serif;
 
 $theme-colors: (
         "primary": $primary,
@@ -18,6 +18,7 @@ $theme-colors: (
     align-items: center;
     flex-direction: $direction;
 }
+
 //Nav bar
 .nav-link-color {
     color: $colorNavLink;
@@ -68,6 +69,20 @@ h1 {
 .column-actor {
     width: 100%;
     border: 1px solid $primary;
+}
+
+//INDEX PAGE PROGRAMS
+.table {
+    .title-programs {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .cross {
+        height: 35px;
+        margin-left: 10px;
+    }
 }
 
 
